# services/api/admin/internal/types/types.go
@@ -17,66 +17,74 @@ type PingResponse struct {
 }
 
 type Category struct {
-	Id              int64  `json:"id"`                       // category id
-	ParentId        int64  `json:"parentId,optional"`        // parent category id. references Category.Id
-	Slug            string `json:"slug"`                     // slug name of the category
-	Name            string `json:"name"`                     // name of category
-	Description     string `json:"description,optional"`     // description of category
-	MetaTitle       string `json:"metaTitle,optional"`       // metatag title for SEO
-	MetaDescription string `json:"metaDescription,optional"` // metatag description for SEO
-	MetaKeywords    string `json:"metaKeywords,optional"`    // metatag keywords for SEO
-	Depth           int32  `json:"depth,optional"`           // category level depth
-	SortOrder       int32  `json:"sortOrder,optional"`       // sort order of menu items on the same level and same parent id
+	Id              int64  `json:"id"`                                 // category id
+	ParentId        int64  `json:"parentId,optional,omitempty"`        // parent category id. references Category.Id
+	Slug            string `json:"slug"`                               // slug name of the category
+	Name            string `json:"name"`                               // name of category
+	Description     string `json:"description,optional,omitempty"`     // description of category
+	MetaTitle       string `json:"metaTitle,optional,omitempty"`       // metatag title for SEO
+	MetaDescription string `json:"metaDescription,optional,omitempty"` // metatag description for SEO
+	MetaKeywords    string `json:"metaKeywords,optional,omitempty"`    // metatag keywords for SEO
+	Depth           int32  `json:"depth,optional,omitempty"`           // category level depth
+	SortOrder       int32  `json:"sortOrder,optional,omitempty"`       // sort order of menu items on the same level and same parent id
 }
 
 type Product struct {
-	Id               int64     `json:"id"`                        // product id
-	Slug             string    `json:"slug"`                      // product slug
-	Name             string    `json:"name"`                      // product name
-	ShortDescription string    `json:"shortDescription,optional"` // product short description. used in category pages
-	Description      string    `json:"description,optional"`      // category description
-	MetaTitle        string    `json:"metaTitle,optional"`        // metatag title for SEO
-	MetaDescription  string    `json:"metaDescription,optional"`  // metatag description for SEO
-	MetaKeywords     string    `json:"metaKeywords,optional"`     // metatag keywords for SEO
-	Variants         []Variant `json:"variants,optional"`         // collection of Variant objects
+	Id               int64     `json:"id"`                                  // product id
+	Slug             string    `json:"slug"`                                // product slug
+	Name             string    `json:"name"`                                // product name
+	ShortDescription string    `json:"shortDescription,optional,omitempty"` // product short description. used in category pages
+	Description      string    `json:"description,optional,omitempty"`      // category description
+	MetaTitle        string    `json:"metaTitle,optional,omitempty"`        // metatag title for SEO
+	MetaDescription  string    `json:"metaDescription,optional,omitempty"`  // metatag description for SEO
+	MetaKeywords     string    `json:"metaKeywords,optional,omitempty"`     // metatag keywords for SEO
+	Variants         []Variant `json:"variants,optional,omitempty"`         // collection of Variant objects
+	DefaultImage     Asset     `json:"defaultImage,optional,omitempty"`     // default Asset object of image type
+	Images           []Asset   `json:"images,optional,omitempty"`           // array of Asset objects of image type
 }
 
 type Variant struct {
-	Id        int64   `json:"id"`              // variant id
-	IsDefault bool    `json:"isDefault"`       // is default variant. each product must have exactly 1 default variant
-	Sku       string  `json:"sku"`             // variant sku. usually the product sku with appended identification tags
-	Weight    float64 `json:"weight,optional"` // variant weight. used in calculating shipping
-	Height    float64 `json:"height,optional"` // variant height. used in calculating shipping
-	Width     float64 `json:"width,optional"`  // variant width. used in calculating shipping
-	Depth     float64 `json:"depth,optional"`  // variant depth. used in calculating shipping
-	Price     Price   `json:"price,optional"`  // variant Price object
+	Id        int64   `json:"id"`                        // variant id
+	IsDefault bool    `json:"isDefault"`                 // is default variant. each product must have exactly 1 default variant
+	Sku       string  `json:"sku"`                       // variant sku. usually the product sku with appended identification tags
+	Weight    float64 `json:"weight,optional,omitempty"` // variant weight. used in calculating shipping
+	Height    float64 `json:"height,optional,omitempty"` // variant height. used in calculating shipping
+	Width     float64 `json:"width,optional,omitempty"`  // variant width. used in calculating shipping
+	Depth     float64 `json:"depth,optional,omitempty"`  // variant depth. used in calculating shipping
+	Price     Price   `json:"price,optional,omitempty"`  // variant Price object
 }
 
 type Price struct {
-	Id                     int64   `json:"id,optional"`                     // price id
-	Amount                 float64 `json:"amount"`                          // price amount
-	DisplayAmount          string  `json:"displayAmount"`                   // price display amount
-	CompareAtAmount        float64 `json:"compareAtAmount,optional"`        // price compare amount
-	DisplayCompareAtAmount string  `json:"displayCompareAtAmount,optional"` // price display compare amount
-	Currency               string  `json:"currency,optional"`               // price currency. example: USD, CAN, etc.
+	Id                     int64   `json:"id,optional,omitempty"`                     // price id
+	Amount                 float64 `json:"amount"`                                    // price amount
+	DisplayAmount          string  `json:"displayAmount"`                             // price display amount
+	CompareAtAmount        float64 `json:"compareAtAmount,optional,omitempty"`        // price compare amount
+	DisplayCompareAtAmount string  `json:"displayCompareAtAmount,optional,omitempty"` // price display compare amount
+	Currency               string  `json:"currency,optional,omitempty"`               // price currency. example: USD, CAN, etc.
 }
 
 type Asset struct {
-	Id          int64  `json:"id,optional"`
-	ProductId   int64  `json:"productId,optional"`
-	VariantId   int64  `json:"variantId,optional"`
-	Name        string `json:"name,optional"`
-	DisplayName string `json:"displayName,optional"`
-	Url         string `json:"url,optional"`
-	Kind        string `json:"kind,optional,options=image|document|audio|video|archive"`
-	ContentType string `json:"contentType,optional"`
-	SortOrder   int32  `json:"sortOrder,optional"`
+	Id          int64       `json:"id,optional,omitempty"`
+	ProductId   int64       `json:"productId,optional,omitempty"`
+	VariantId   int64       `json:"variantId,optional,omitempty"`
+	Name        string      `json:"name,optional,omitempty"`
+	DisplayName string      `json:"displayName,optional,omitempty"`
+	Url         string      `json:"url,optional,omitempty"`
+	Kind        string      `json:"kind,optional,omitempty,options=image|document|audio|video|archive"`
+	ContentType string      `json:"contentType,optional,omitempty"`
+	SortOrder   int64       `json:"sortOrder,optional,omitempty"`
+	Sizes       []ImageSize `json:"sizes,optional,omitempty"`
+}
+
+type ImageSize struct {
+	Tag string `json:"tag,optional,omitempty"`
+	URL string `json:"url,optional,omitempty"`
 }
 
 type GetAllCategoriesRequest struct {
 	CurrentPage int64  `path:"currentPage"`
 	PageSize    int64  `path:"pageSize"`
-	SortOn      string `form:"sortOn,optional"`
+	SortOn      string `form:"sortOn,optional,omitempty"`
 }
 
 type GetAllCategoriesResponse struct {
@@ -125,7 +133,7 @@ type GetProductsByCategoryIdRequest struct {
 	CategoryId  int64  `path:"categoryId"`
 	CurrentPage int64  `path:"currentPage"`
 	PageSize    int64  `path:"pageSize"`
-	SortOn      string `form:"sortOn,optional"`
+	SortOn      string `form:"sortOn,optional,omitempty"`
 }
 
 type GetProductsByCategoryIdResponse struct {
@@ -137,8 +145,8 @@ type GetProductsByCategoryIdResponse struct {
 type GetAllProductsRequest struct {
 	CurrentPage int64  `path:"currentPage"`
 	PageSize    int64  `path:"pageSize"`
-	Filter      string `form:"filter,optional"`
-	SortOn      string `form:"sortOn,optional"`
+	Filter      string `form:"filter,optional,omitempty"`
+	SortOn      string `form:"sortOn,optional,omitempty"`
 }
 
 type GetAllProductsResponse struct {
